[project]
name = "sofagym"
version = "0.0.1"
description = "An environment based on Sofa"
keywords = ["simulation", "environment", "reinforcement learning", "SOFA"]
readme = "README.md"
authors = [
  { name = "Etienne Ménager", email = "etienne.menager@ens-rennes.fr" },
  { name = "Pierre Schegg", email = "pierre.schegg@robocath.com" },
]
requires-python = ">=3.12"
dependencies = [
  "build>=1.2.2.post1",
  "cloudpickle==3.1.0",
  "glfw==2.7.0",
  "gym-notices==0.0.8",
  "gym==0.26.2",
  "imageio==2.36.0",
  "numpy==2.1.3",
  "pillow==11.0.0",
  "psutil==6.1.0",
  "pygame==2.6.1",
  "pyopengl==3.1.7",
]

[tool.hatch.build.targets.wheel]
packages = ["sofagym"]

[build-system]
requires = ["hatchling", "gym", "numpy", "glfw", "pygame"]
build-backend = "hatchling.build"
